# shop

pythonProject16/: client.py  server.py
pythonProject18/: framework.py  main.py
pythonProject19/: init_db.py  main.py
pythonProject19/templates/: base.html  index.html
pythonProject20/: alembic.ini  blog.py  db.py  facade.py
pythonProject20/alembic/versions/: 48675e8bd62e_create_tablles.py
shop_project/shop/: .env  pyproject.toml
shop_project/shop/catalog/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
shop_project/shop/catalog/migrations/: 0001_initial.py  0002_order_orderproducts.py  0003_cashback.py
shop_project/shop/catalog/tests/: test_guest_endpoints.py
shop_project/shop/catalog/tests/fixtures/: categories_fixture.json  discounts_fixture.json  products_fixture.json  sellers_fixture.json
shop_project/shop/shop/: __init__.py  celery.py  settings.py  urls.py
shop_project/shop/users/: models.py  urls.py  views.py
shop_project/shop/users/migrations/: 0001_initial.py
shop_project/shop/users/tests/: test_login.py
