[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["asus <onlineron28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.7"
prospector = "^1.10.2"
django-environ = "^0.11.2"
djoser = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
